Acrescentado valor de vendas

--- a/vendas.html
+++ b/vendas.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Inicio</h1>
+    <p>Vendas = Rs 5000</p>
     <a href="index.html">Voltar para a pagina</a>    
 </body>
 </html>
